--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -11,6 +11,7 @@
 .jsModarClose{display: block;width: 100%;height: 72px;background: #CDC9C2;font-size: 36px;color: #A09D96;font-family: "Black Han Sans", sans-serif;cursor: inherit;pointer-events: none;}
 .jsModarClose.on{background: #FF4655;color: #ECE8E1;cursor: pointer;pointer-events: inherit;}
 .btnCloseModar{position: absolute;right: 40px;top: 40px;width: 24px;height: 24px;background-image: url(../images/icon_popup_close.svg);background-position: center;background-repeat: no-repeat;overflow: hidden;text-indent: -9999px;white-space: nowrap;}
+.popupOpened{overflow: hidden !important;-webkit-overflow-scrolling: touch;}
 
 .popupTitleXs{margin-top: 34px;font-size: 28px;color: #0F1923;font-weight: 600;line-height: 150%;word-break: keep-all;}
 .popupTitleSm{padding-right: 30px;font-size: 24px;color: #0F1923;font-weight: 600;line-height: 160%;word-break: keep-all;}
